--- a/singularity/subgraph.yaml
+++ b/singularity/subgraph.yaml
@@ -4,9 +4,9 @@ schema:
 dataSources:
   - kind: arweave
     name: Contract
-    network: arweave-mainnet
+    network: sepolia
     source:
-      owner: ""
+      owner: "0x8b2Ab8775a43D3958bF30A203f6C73e020BCE877"
     mapping:
       apiVersion: 0.0.5
       language: wasm/assemblyscript
