--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -1,14 +1,16 @@
-specVersion: 0.0.5
+specVersion: 1.0.0
+indexerHints:
+  prune: auto
 schema:
   file: ./schema.graphql
 dataSources:
   - kind: ethereum
     name: DarkpoolAssetManager
-    network: sepolia
+    network: mainnet
     source:
-      address: "0x8b2Ab8775a43D3958bF30A203f6C73e020BCE877"
+      address: "0x4E76FbE44fa5Dae076a7f4f676250e7941421fbA"
       abi: DarkpoolAssetManager
-      startBlock: 5387197
+      startBlock: 19401351
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -25,28 +27,28 @@ dataSources:
         - name: DarkpoolAssetManager
           file: ./abis/DarkpoolAssetManager.json
       eventHandlers:
-        - event: Deposit(indexed bytes32,uint256,address)
+        - event: Deposit(address,bytes32,uint256,address)
           handler: handleDeposit
-        - event: Join(indexed bytes32,indexed bytes32,indexed bytes32)
+        - event: Join(bytes32,bytes32,bytes32)
           handler: handleJoin
-        - event: JoinSplit(indexed bytes32,indexed bytes32,bytes32,bytes32)
+        - event: JoinSplit(bytes32,bytes32,bytes32,bytes32)
           handler: handleJoinSplit
         - event: OwnershipTransferred(indexed address,indexed address)
           handler: handleOwnershipTransferred
-        - event: Split(indexed bytes32,indexed bytes32,indexed bytes32)
+        - event: Split(bytes32,bytes32,bytes32)
           handler: handleSplit
-        - event: Transfer(indexed bytes32,indexed bytes32)
+        - event: Transfer(bytes32,uint256,address,bytes32,bytes32)
           handler: handleTransfer
-        - event: Withdraw(indexed bytes32,uint256,address,address)
+        - event: Withdraw(bytes32,uint256,address,address)
           handler: handleWithdraw
-      file: ./src/dark-pool-asset-manager.ts
+      file: ./src/darkpool-asset-manager.ts
   - kind: ethereum
     name: UniswapSwapAssetManager
-    network: sepolia
+    network: mainnet
     source:
-      address: "0xbfD27E56d164D6AC08812cC93a6E679718FF7483"
+      address: "0xA3b48c7b901fede641B596A4C10a4630052449A6"
       abi: UniswapSwapAssetManager
-      startBlock: 5387207
+      startBlock: 19401351
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -60,16 +62,16 @@ dataSources:
       eventHandlers:
         - event: OwnershipTransferred(indexed address,indexed address)
           handler: handleOwnershipTransferred
-        - event: UniswapSwap(address,address,uint256,uint256,bytes32,uint256)
+        - event: UniswapSwap(address,uint256,bytes32,bytes32,bytes32)
           handler: handleUniswapSwap
       file: ./src/uniswap-swap-asset-manager.ts
   - kind: ethereum
     name: UniswapLiquidityAssetManager
-    network: sepolia
+    network: mainnet
     source:
-      address: "0xB77bec6b1DCb52Df40e5301422466B0ddFb115Be"
+      address: "0x72F853E9E202600c5017B5A060168603c3ed7368"
       abi: UniswapLiquidityAssetManager
-      startBlock: 5387202
+      startBlock: 19401351
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -85,20 +87,20 @@ dataSources:
       eventHandlers:
         - event: OwnershipTransferred(indexed address,indexed address)
           handler: handleOwnershipTransferred
-        - event: UniswapCollectFees(uint256,uint256[2],uint256[2])
+        - event: UniswapCollectFees(uint256,address[2],uint256[2],bytes32[2],bytes32[2])
           handler: handleUniswapCollectFees
-        - event: UniswapLiquidityProvision(uint256,uint256,bytes32[2],uint256[2],uint256[2],bytes32[2])
+        - event: UniswapLiquidityProvision(uint256,bytes32,bytes32[2],uint256[2],bytes32[2],bytes32[2])
           handler: handleUniswapLiquidityProvision
-        - event: UniswapRemoveLiquidity(uint256,bytes32,uint256[2],uint256[2])
+        - event: UniswapRemoveLiquidity(uint256,bytes32,uint256[2],bytes32[2],bytes32[2])
           handler: handleUniswapRemoveLiquidity
       file: ./src/uniswap-liquidity-asset-manager.ts
   - kind: ethereum
     name: CurveSingleExchangeAssetManager
-    network: sepolia
+    network: mainnet
     source:
-      address: "0xb08F8db7fEd8bA55b552Eef1162D113B0e7D17FD"
+      address: "0x2e13f7644014F6E934E314F0371585845de7B986"
       abi: CurveSingleExchangeAssetManager
-      startBlock: 5387192
+      startBlock: 19401351
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -110,18 +112,18 @@ dataSources:
         - name: CurveSingleExchangeAssetManager
           file: ./abis/CurveSingleExchangeAssetManager.json
       eventHandlers:
-        - event: CurveExchange(bytes32,bytes32,uint256,bytes32)
+        - event: CurveExchange(bytes32,address,uint256,bytes32,bytes32)
           handler: handleCurveExchange
         - event: OwnershipTransferred(indexed address,indexed address)
           handler: handleOwnershipTransferred
       file: ./src/curve-single-exchange-asset-manager.ts
   - kind: ethereum
     name: CurveMultiExchangeAssetManager
-    network: sepolia
+    network: mainnet
     source:
-      address: "0x216d757Cf1033aAA49be2C689ca5c99fb010d13d"
+      address: "0x725314746e727f586E9FCA65AeD5dBe45aA71B99"
       abi: CurveMultiExchangeAssetManager
-      startBlock: 5387179
+      startBlock: 19401351
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -133,146 +135,164 @@ dataSources:
         - name: CurveMultiExchangeAssetManager
           file: ./abis/CurveMultiExchangeAssetManager.json
       eventHandlers:
-        - event: CurveExchange(bytes32,bytes32,uint256,bytes32)
+        - event: CurveExchange(bytes32,address,uint256,bytes32,bytes32)
           handler: handleCurveExchange
         - event: OwnershipTransferred(indexed address,indexed address)
           handler: handleOwnershipTransferred
       file: ./src/curve-multi-exchange-asset-manager.ts
   - kind: ethereum
     name: CurveAddLiquidityAssetManager
-    network: sepolia
+    network: mainnet
     source:
-      address: "0x20D72e57b5d6b20f24E4Cd3681E227f360D0a8Ed"
+      address: "0x04F75a27cE2FDC591C71a88f1EcaC7e5Ce44f5Fc"
       abi: CurveAddLiquidityAssetManager
-      startBlock: 5387150
+      startBlock: 19401351
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
       language: wasm/assemblyscript
       entities:
         - CurveAddLiquidity
+        - CurveRemoveLiquidity
         - CurveAddLiquidityAssetManagerOwnershipTransferred
       abis:
         - name: CurveAddLiquidityAssetManager
           file: ./abis/CurveAddLiquidityAssetManager.json
       eventHandlers:
-        - event: CurveAddLiquidity(bytes32[4],bytes32,uint256,bytes32)
+        - event: CurveAddLiquidity(bytes32[4],address,uint256,bytes32,bytes32)
           handler: handleCurveAddLiquidity
+        - event: CurveRemoveLiquidity(bytes32,address[5],uint256[5],bytes32[5],bytes32[5])
+          handler: handleCurveRemoveLiquidity
         - event: OwnershipTransferred(indexed address,indexed address)
           handler: handleOwnershipTransferred
       file: ./src/curve-add-liquidity-asset-manager.ts
   - kind: ethereum
-    name: CurveRemoveLiquidityAssetManager
-    network: sepolia
-    source:
-      address: "0x4c2A8c94Fa4F03C5AE2130C74bF5f92CfA86fB59"
-      abi: CurveRemoveLiquidityAssetManager
-      startBlock: 5387184
-    mapping:
-      kind: ethereum/events
-      apiVersion: 0.0.7
-      language: wasm/assemblyscript
-      entities:
-        - CurveRemoveLiquidity
-        - CurveRemoveLiquidityAssetManagerOwnershipTransferred
-      abis:
-        - name: CurveRemoveLiquidityAssetManager
-          file: ./abis/CurveRemoveLiquidityAssetManager.json
-      eventHandlers:
-        - event: CurveRemoveLiquidity((bytes32,bytes32,uint256,bytes32)[5])
-          handler: handleCurveRemoveLiquidity
-        - event: OwnershipTransferred(indexed address,indexed address)
-          handler: handleOwnershipTransferred
-      file: ./src/curve-remove-liquidity-asset-manager.ts
-  - kind: ethereum
     name: CurveFSNAddLiquidityAssetManager
-    network: sepolia
+    network: mainnet
     source:
-      address: "0x9a7134047e3CceAa1A7c3fF68D2fFa8dF002c330"
+      address: "0x10537D7bD661C9c34F547b38EC662D6FD482Ae95"
       abi: CurveFSNAddLiquidityAssetManager
-      startBlock: 5387156
+      startBlock: 19401351
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
       language: wasm/assemblyscript
       entities:
         - CurveFSNAddLiquidityAssetManagerCurveAddLiquidity
+        - CurveFSNAddLiquidityAssetManagerCurveRemoveLiquidity
         - CurveFSNAddLiquidityAssetManagerOwnershipTransferred
       abis:
         - name: CurveFSNAddLiquidityAssetManager
           file: ./abis/CurveFSNAddLiquidityAssetManager.json
       eventHandlers:
-        - event: CurveAddLiquidity(bytes32[4],bytes32,uint256,bytes32)
+        - event: CurveAddLiquidity(bytes32[4],address,uint256,bytes32,bytes32)
           handler: handleCurveAddLiquidity
+        - event: CurveRemoveLiquidity(bytes32,address[5],uint256[5],bytes32[5],bytes32[5])
+          handler: handleCurveRemoveLiquidity
         - event: OwnershipTransferred(indexed address,indexed address)
           handler: handleOwnershipTransferred
       file: ./src/curve-fsn-add-liquidity-asset-manager.ts
   - kind: ethereum
     name: CurveFSNRemoveLiquidityAssetManager
-    network: sepolia
+    network: mainnet
     source:
-      address: "0x8685a4c866529B89894d13F5eAA3E3163e1A9735"
+      address: "0xf42Ec71A4440F5e9871C643696DD6Dc9a38911F8"
       abi: CurveFSNRemoveLiquidityAssetManager
-      startBlock: 5387161
+      startBlock: 19401351
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
       language: wasm/assemblyscript
       entities:
+        - CurveFSNRemoveLiquidityAssetManagerCurveAddLiquidity
         - CurveFSNRemoveLiquidityAssetManagerCurveRemoveLiquidity
         - CurveFSNRemoveLiquidityAssetManagerOwnershipTransferred
       abis:
         - name: CurveFSNRemoveLiquidityAssetManager
           file: ./abis/CurveFSNRemoveLiquidityAssetManager.json
       eventHandlers:
-        - event: CurveRemoveLiquidity((bytes32,bytes32,uint256,bytes32)[5])
+        - event: CurveAddLiquidity(bytes32[4],address,uint256,bytes32,bytes32)
+          handler: handleCurveAddLiquidity
+        - event: CurveRemoveLiquidity(bytes32,address[5],uint256[5],bytes32[5],bytes32[5])
           handler: handleCurveRemoveLiquidity
         - event: OwnershipTransferred(indexed address,indexed address)
           handler: handleOwnershipTransferred
       file: ./src/curve-fsn-remove-liquidity-asset-manager.ts
   - kind: ethereum
     name: CurveMPAddLiquidityAssetManager
-    network: sepolia
+    network: mainnet
     source:
-      address: "0x0eFCbAB3236Ef0e081F4bBB9A48062476AfAC309"
+      address: "0x41219a0a9C0b86ED81933c788a6B63Dfef8f17eE"
       abi: CurveMPAddLiquidityAssetManager
-      startBlock: 5387166
+      startBlock: 19401351
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
       language: wasm/assemblyscript
       entities:
         - CurveMPAddLiquidityAssetManagerCurveAddLiquidity
+        - CurveMPAddLiquidityAssetManagerCurveRemoveLiquidity
         - CurveMPAddLiquidityAssetManagerOwnershipTransferred
       abis:
         - name: CurveMPAddLiquidityAssetManager
           file: ./abis/CurveMPAddLiquidityAssetManager.json
       eventHandlers:
-        - event: CurveAddLiquidity(bytes32[4],bytes32,uint256,bytes32)
+        - event: CurveAddLiquidity(bytes32[4],address,uint256,bytes32,bytes32)
           handler: handleCurveAddLiquidity
+        - event: CurveRemoveLiquidity(bytes32,address[5],uint256[5],bytes32[5],bytes32[5])
+          handler: handleCurveRemoveLiquidity
         - event: OwnershipTransferred(indexed address,indexed address)
           handler: handleOwnershipTransferred
       file: ./src/curve-mp-add-liquidity-asset-manager.ts
   - kind: ethereum
     name: CurveMPRemoveLiquidityAssetManager
-    network: sepolia
+    network: mainnet
     source:
-      address: "0x3136Ab3125b03AA0D9433B166A7aEf1136965AEa"
+      address: "0x18b7CBdfFA52d1e7BB992fd50f394c5b59E20B72"
       abi: CurveMPRemoveLiquidityAssetManager
-      startBlock: 5387173
+      startBlock: 19401351
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
       language: wasm/assemblyscript
       entities:
+        - CurveMPRemoveLiquidityAssetManagerCurveAddLiquidity
         - CurveMPRemoveLiquidityAssetManagerCurveRemoveLiquidity
         - CurveMPRemoveLiquidityAssetManagerOwnershipTransferred
       abis:
         - name: CurveMPRemoveLiquidityAssetManager
           file: ./abis/CurveMPRemoveLiquidityAssetManager.json
       eventHandlers:
-        - event: CurveRemoveLiquidity((bytes32,bytes32,uint256,bytes32)[5])
+        - event: CurveAddLiquidity(bytes32[4],address,uint256,bytes32,bytes32)
+          handler: handleCurveAddLiquidity
+        - event: CurveRemoveLiquidity(bytes32,address[5],uint256[5],bytes32[5],bytes32[5])
           handler: handleCurveRemoveLiquidity
         - event: OwnershipTransferred(indexed address,indexed address)
           handler: handleOwnershipTransferred
       file: ./src/curve-mp-remove-liquidity-asset-manager.ts
+  - kind: ethereum
+    name: CurveRemoveLiquidityAssetManager
+    network: mainnet
+    source:
+      address: "0x64079a2Edd1104a2323E2b732A1244BCE011B1F5"
+      abi: CurveRemoveLiquidityAssetManager
+      startBlock: 19401351
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.7
+      language: wasm/assemblyscript
+      entities:
+        - CurveRemoveLiquidityAssetManagerCurveAddLiquidity
+        - CurveRemoveLiquidityAssetManagerCurveRemoveLiquidity
+        - CurveRemoveLiquidityAssetManagerOwnershipTransferred
+      abis:
+        - name: CurveRemoveLiquidityAssetManager
+          file: ./abis/CurveRemoveLiquidityAssetManager.json
+      eventHandlers:
+        - event: CurveAddLiquidity(bytes32[4],address,uint256,bytes32,bytes32)
+          handler: handleCurveAddLiquidity
+        - event: CurveRemoveLiquidity(bytes32,address[5],uint256[5],bytes32[5],bytes32[5])
+          handler: handleCurveRemoveLiquidity
+        - event: OwnershipTransferred(indexed address,indexed address)
+          handler: handleOwnershipTransferred
+      file: ./src/curve-remove-liquidity-asset-manager.ts
