--- a/subgraph-hardhat.yaml
+++ b/subgraph-hardhat.yaml
@@ -8,7 +8,7 @@ dataSources:
     name: DarkpoolAssetManager
     network: mainnet
     source:
-      address: "0x81F82957608f74441E085851cA5Cc091b23d17A2"
+      address: "0x6c383Ef7C9Bf496b5c847530eb9c49a3ED6E4C56"
       abi: DarkpoolAssetManager
       startBlock: 19824296
     mapping:
@@ -46,7 +46,7 @@ dataSources:
     name: UniswapSwapAssetManager
     network: mainnet
     source:
-      address: "0x86c64cB21f88fA9E2c46b61c35889E75f08FDce1"
+      address: "0x1966dc8ff30Bc4AeDEd27178642253b3cCC9AA3f"
       abi: UniswapSwapAssetManager
       startBlock: 19824296
     mapping:
@@ -69,7 +69,7 @@ dataSources:
     name: UniswapLiquidityAssetManager
     network: mainnet
     source:
-      address: "0x30A6d2B697635a0ECf1975d2386A0FE6b608B0Fb"
+      address: "0xd8E4Af8145A8288537B85878bb2371fa070Aa5eF"
       abi: UniswapLiquidityAssetManager
       startBlock: 19824296
     mapping:
@@ -98,7 +98,7 @@ dataSources:
     name: CurveSingleExchangeAssetManager
     network: mainnet
     source:
-      address: "0x221416CFa5A3CD92035E537ded1dD12d4d587c03"
+      address: "0x36B81ebd01C31643BAF132240C8Bc6874B329c4C"
       abi: CurveSingleExchangeAssetManager
       startBlock: 19824296
     mapping:
@@ -121,7 +121,7 @@ dataSources:
     name: CurveMultiExchangeAssetManager
     network: mainnet
     source:
-      address: "0x0C8542AB89c1C60D711B00F309f7EF63b5D9d6eb"
+      address: "0xa51807d5a12E7e78148c66dC4851CD33EEd1FDfD"
       abi: CurveMultiExchangeAssetManager
       startBlock: 19824296
     mapping:
@@ -144,7 +144,7 @@ dataSources:
     name: CurveAddLiquidityAssetManager
     network: mainnet
     source:
-      address: "0xe519389F8c262d4301Fd2830196FB7D0021daf59"
+      address: "0xE5b6F5e695BA6E4aeD92B68c4CC8Df1160D69A81"
       abi: CurveAddLiquidityAssetManager
       startBlock: 19824296
     mapping:
@@ -170,7 +170,7 @@ dataSources:
     name: CurveFSNAddLiquidityAssetManager
     network: mainnet
     source:
-      address: "0x49AeF2C4005Bf572665b09014A563B5b9E46Df21"
+      address: "0x1F2C6E90F3DF741E0191eAbB1170f0B9673F12b3"
       abi: CurveFSNAddLiquidityAssetManager
       startBlock: 19824296
     mapping:
@@ -196,7 +196,7 @@ dataSources:
     name: CurveFSNRemoveLiquidityAssetManager
     network: mainnet
     source:
-      address: "0xD61210E756f7D71Cc4F74abF0747D65Ea9d7525b"
+      address: "0x00436c9F57dfFd96cECd129c04D9E488c57266cF"
       abi: CurveFSNRemoveLiquidityAssetManager
       startBlock: 19824296
     mapping:
@@ -222,7 +222,7 @@ dataSources:
     name: CurveMPAddLiquidityAssetManager
     network: mainnet
     source:
-      address: "0xB8d6D6b01bFe81784BE46e5771eF017Fa3c906d8"
+      address: "0xa591098680B1e183C332Ea8e2612a2Cf2e6ABC17"
       abi: CurveMPAddLiquidityAssetManager
       startBlock: 19824296
     mapping:
@@ -248,7 +248,7 @@ dataSources:
     name: CurveMPRemoveLiquidityAssetManager
     network: mainnet
     source:
-      address: "0x81f4f47aa3bBd154171C877b4d70F6C9EeCAb216"
+      address: "0x9a8164cA007ff0899140719E9aEC9a9C889CbF1E"
       abi: CurveMPRemoveLiquidityAssetManager
       startBlock: 19824296
     mapping:
@@ -274,7 +274,7 @@ dataSources:
     name: CurveRemoveLiquidityAssetManager
     network: mainnet
     source:
-      address: "0xB354ECF032e9e14442bE590D9Eaee37d2924B67A"
+      address: "0x0BFC626B583e93A5F793Bc2cAa195BDBB2ED9F20"
       abi: CurveRemoveLiquidityAssetManager
       startBlock: 19824296
     mapping:
@@ -296,3 +296,29 @@ dataSources:
         - event: OwnershipTransferred(indexed address,indexed address)
           handler: handleOwnershipTransferred
       file: ./src/curve-remove-liquidity-asset-manager.ts
+  - kind: ethereum
+    name: StakingAssetManager
+    network: mainnet
+    source:
+      address: "0x4Bd915C3e39cfF4eac842255965E79061c38cACD"
+      abi: StakingAssetManager
+      startBlock: 20030270
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.7
+      language: wasm/assemblyscript
+      entities:
+        - Locked
+        - StakingAssetManagerOwnershipTransferred
+        - Unlocked
+      abis:
+        - name: StakingAssetManager
+          file: ./abis/StakingAssetManager.json
+      eventHandlers:
+        - event: Locked(address,address,address,uint256,bytes32,bytes32,bytes32)
+          handler: handleLocked
+        - event: OwnershipTransferred(indexed address,indexed address)
+          handler: handleOwnershipTransferred
+        - event: Unlocked(address,address,uint256,bytes32,bytes32,bytes32)
+          handler: handleUnlocked
+      file: ./src/staking-asset-manager.ts
