--- a/subgraph-hardhat.yaml
+++ b/subgraph-hardhat.yaml
@@ -322,3 +322,29 @@ dataSources:
         - event: Unlocked(address,address,uint256,bytes32,bytes32,bytes32)
           handler: handleUnlocked
       file: ./src/staking-asset-manager.ts
+  - kind: ethereum
+    name: RocketPoolStakeAssetManager
+    network: mainnet
+    source:
+      address: "0x4Bd915C3e39cfF4eac842255965E79061c38cACD"
+      abi: RocketPoolStakeAssetManager
+      startBlock: 20030270
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.7
+      language: wasm/assemblyscript
+      entities:
+        - RocketPoolStakeAssetManagerOwnershipTransferred
+        - RocketDeposit
+        - RocketWithdrawal
+      abis:
+        - name: RocketPoolStakeAssetManager
+          file: ./abis/RocketPoolStakeAssetManager.json
+      eventHandlers:
+        - event: OwnershipTransferred(indexed address,indexed address)
+          handler: handleOwnershipTransferred
+        - event: RocketDeposit(bytes32,uint256,bytes32,bytes32)
+          handler: handleRocketDeposit
+        - event: RocketWithdrawal(bytes32,uint256,bytes32,bytes32)
+          handler: handleRocketWithdrawal
+      file: ./src/rocket-pool-stake-asset-manager.ts
