--- a/subgraph-hardhat.yaml
+++ b/subgraph-hardhat.yaml
@@ -8,7 +8,7 @@ dataSources:
     name: DarkpoolAssetManager
     network: mainnet
     source:
-      address: "0x987Aa6E80e995d6A76C4d061eE324fc760Ea9F61"
+      address: "0xe24e7570Fe7207AdAaAa8c6c89a59850391B5276"
       abi: DarkpoolAssetManager
       startBlock: 19758958
     mapping:
@@ -46,7 +46,7 @@ dataSources:
     name: UniswapSwapAssetManager
     network: mainnet
     source:
-      address: "0x37453c92a0E3C63949ba340ee213c6C97931F96D"
+      address: "0xfaA7b3a4b5c3f54a934a2e33D34C7bC099f96CCE"
       abi: UniswapSwapAssetManager
       startBlock: 19758958
     mapping:
@@ -69,7 +69,7 @@ dataSources:
     name: UniswapLiquidityAssetManager
     network: mainnet
     source:
-      address: "0xe8c3F27D20472e4f3C546A3f73C04B54DD72871d"
+      address: "0xCd9BC6cE45194398d12e27e1333D5e1d783104dD"
       abi: UniswapLiquidityAssetManager
       startBlock: 19758958
     mapping:
@@ -98,7 +98,7 @@ dataSources:
     name: CurveSingleExchangeAssetManager
     network: mainnet
     source:
-      address: "0x9bDD64340D3CE0607f51bBC7508CA40D45849ab8"
+      address: "0x81F82957608f74441E085851cA5Cc091b23d17A2"
       abi: CurveSingleExchangeAssetManager
       startBlock: 19758958
     mapping:
@@ -121,7 +121,7 @@ dataSources:
     name: CurveMultiExchangeAssetManager
     network: mainnet
     source:
-      address: "0x2aA12f98795E7A65072950AfbA9d1E023D398241"
+      address: "0xB354ECF032e9e14442bE590D9Eaee37d2924B67A"
       abi: CurveMultiExchangeAssetManager
       startBlock: 19758958
     mapping:
@@ -144,7 +144,7 @@ dataSources:
     name: CurveAddLiquidityAssetManager
     network: mainnet
     source:
-      address: "0x0Deeb4b6492C1a55Bb7C0555AaFf65fF6dC424B2"
+      address: "0x49AeF2C4005Bf572665b09014A563B5b9E46Df21"
       abi: CurveAddLiquidityAssetManager
       startBlock: 19758958
     mapping:
@@ -170,7 +170,7 @@ dataSources:
     name: CurveFSNAddLiquidityAssetManager
     network: mainnet
     source:
-      address: "0xf4e55515952BdAb2aeB4010f777E802D61eB384f"
+      address: "0xD61210E756f7D71Cc4F74abF0747D65Ea9d7525b"
       abi: CurveFSNAddLiquidityAssetManager
       startBlock: 19758958
     mapping:
@@ -196,7 +196,7 @@ dataSources:
     name: CurveFSNRemoveLiquidityAssetManager
     network: mainnet
     source:
-      address: "0x00B0517de6b2b09aBD3a7B69d66D85eFdb2c7d94"
+      address: "0xB8d6D6b01bFe81784BE46e5771eF017Fa3c906d8"
       abi: CurveFSNRemoveLiquidityAssetManager
       startBlock: 19758958
     mapping:
@@ -222,7 +222,7 @@ dataSources:
     name: CurveMPAddLiquidityAssetManager
     network: mainnet
     source:
-      address: "0x82Bd83ec6D4bCC8EaB6F6cF7565efE1e41D92Ce5"
+      address: "0x81f4f47aa3bBd154171C877b4d70F6C9EeCAb216"
       abi: CurveMPAddLiquidityAssetManager
       startBlock: 19758958
     mapping:
@@ -248,7 +248,7 @@ dataSources:
     name: CurveMPRemoveLiquidityAssetManager
     network: mainnet
     source:
-      address: "0xa138575a030a2F4977D19Cc900781E7BE3fD2bc0"
+      address: "0x0C8542AB89c1C60D711B00F309f7EF63b5D9d6eb"
       abi: CurveMPRemoveLiquidityAssetManager
       startBlock: 19758958
     mapping:
@@ -274,7 +274,7 @@ dataSources:
     name: CurveRemoveLiquidityAssetManager
     network: mainnet
     source:
-      address: "0x01c93598EeC9131C05a2450Cd033cbd8F82da31e"
+      address: "0x221416CFa5A3CD92035E537ded1dD12d4d587c03"
       abi: CurveRemoveLiquidityAssetManager
       startBlock: 19758958
     mapping:
@@ -300,7 +300,7 @@ dataSources:
     name: StakingAssetManager
     network: mainnet
     source:
-      address: "0x1c32f8818e38a50d37d1E98c72B9516a50985227"
+      address: "0x72aC6A36de2f72BD39e9c782e9db0DCc41FEbfe2"
       abi: StakingAssetManager
       startBlock: 19758958
     mapping:
@@ -326,7 +326,7 @@ dataSources:
     name: RocketPoolStakeAssetManager
     network: mainnet
     source:
-      address: "0xD962a5F050A5F0a2f8dF82aFc04CF1afFE585082"
+      address: "0x1c32f8818e38a50d37d1E98c72B9516a50985227"
       abi: RocketPoolStakeAssetManager
       startBlock: 19758958
     mapping:
@@ -348,3 +348,55 @@ dataSources:
         - event: RocketWithdrawal(bytes32,uint256,bytes32,bytes32)
           handler: handleRocketWithdrawal
       file: ./src/rocket-pool-stake-asset-manager.ts
+  - kind: ethereum
+    name: SablierLinearAssetManager
+    network: mainnet
+    source:
+      address: "0xd2983525E903Ef198d5dD0777712EB66680463bc"
+      abi: SablierLinearAssetManager
+      startBlock: 19758958
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.7
+      language: wasm/assemblyscript
+      entities:
+        - SablierLinearAssetManagerOwnershipTransferred
+        - SablierClaimStream
+        - SablierCreateStream
+      abis:
+        - name: SablierLinearAssetManager
+          file: ./abis/SablierLinearAssetManager.json
+      eventHandlers:
+        - event: OwnershipTransferred(indexed address,indexed address)
+          handler: handleOwnershipTransferred
+        - event: SablierClaimStream(bytes32,address,uint256,bytes32,bytes32)
+          handler: handleSablierClaimStream
+        - event: SablierCreateStream(address,address,uint256[],bytes32[],bytes32[])
+          handler: handleSablierCreateStream
+      file: ./src/sablier-linear-asset-manager.ts
+  - kind: ethereum
+    name: SablierDynamicAssetManager
+    network: mainnet
+    source:
+      address: "0x71d2EBF08bF4FcB82dB5ddE46677263F4c534ef3"
+      abi: SablierDynamicAssetManager
+      startBlock: 19758958
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.7
+      language: wasm/assemblyscript
+      entities:
+        - SablierDynamicAssetManagerOwnershipTransferred
+        - SablierDynamicAssetManagerSablierClaimStream
+        - SablierDynamicAssetManagerSablierCreateStream
+      abis:
+        - name: SablierDynamicAssetManager
+          file: ./abis/SablierDynamicAssetManager.json
+      eventHandlers:
+        - event: OwnershipTransferred(indexed address,indexed address)
+          handler: handleOwnershipTransferred
+        - event: SablierClaimStream(bytes32,address,uint256,bytes32,bytes32)
+          handler: handleSablierClaimStream
+        - event: SablierCreateStream(address,address,uint256[],bytes32[],bytes32[])
+          handler: handleSablierCreateStream
+      file: ./src/sablier-dynamic-asset-manager.ts
