--- a/subgraph-bouncebit.yaml
+++ b/subgraph-bouncebit.yaml
@@ -244,3 +244,29 @@ dataSources:
         - event: RocketWithdrawal(bytes32,uint256,bytes32,bytes32)
           handler: handleRocketWithdrawal
       file: ./src/rocket-pool-stake-asset-manager.ts
+  - kind: ethereum
+    name: NftAssetManager
+    network: mainnet
+    source:
+      address: "0x0"
+      abi: NftAssetManager
+      startBlock: 0
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.7
+      language: wasm/assemblyscript
+      entities:
+        - NftTransfer
+        - NftWithdraw
+        - NftAssetManagerOwnershipTransferred
+      abis:
+        - name: NftAssetManager
+          file: ./abis/NftAssetManager.json
+      eventHandlers:
+        - event: NftTransfer(bytes32,uint256,address,bytes32,bytes32)
+          handler: handleNftTransfer
+        - event: NftWithdraw(bytes32,uint256,address,address)
+          handler: handleNftWithdraw
+        - event: OwnershipTransferred(indexed address,indexed address)
+          handler: handleOwnershipTransferred
+      file: ./src/nft-asset-manager.ts
