--- a/subgraph-mainnet.yaml
+++ b/subgraph-mainnet.yaml
@@ -349,12 +349,64 @@ dataSources:
           handler: handleRocketWithdrawal
       file: ./src/rocket-pool-stake-asset-manager.ts
   - kind: ethereum
+    name: SablierLinearAssetManager
+    network: mainnet
+    source:
+      address: "0xe0fE2642FFc6C58A324Ad65DC37B6B3f9C0f9933"
+      abi: SablierLinearAssetManager
+      startBlock: 20453501
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.7
+      language: wasm/assemblyscript
+      entities:
+        - SablierLinearAssetManagerOwnershipTransferred
+        - SablierClaimStream
+        - SablierCreateStream
+      abis:
+        - name: SablierLinearAssetManager
+          file: ./abis/SablierLinearAssetManager.json
+      eventHandlers:
+        - event: OwnershipTransferred(indexed address,indexed address)
+          handler: handleOwnershipTransferred
+        - event: SablierClaimStream(bytes32,address,uint256,bytes32,bytes32)
+          handler: handleSablierClaimStream
+        - event: SablierCreateStream(address,address,uint256[],bytes32[],bytes32[])
+          handler: handleSablierCreateStream
+      file: ./src/sablier-linear-asset-manager.ts
+  - kind: ethereum
+    name: SablierDynamicAssetManager
+    network: mainnet
+    source:
+      address: "0x0Cd1600114b3e83a212e6570f8ee50988673B84e"
+      abi: SablierDynamicAssetManager
+      startBlock: 20453501
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.7
+      language: wasm/assemblyscript
+      entities:
+        - SablierDynamicAssetManagerOwnershipTransferred
+        - SablierDynamicAssetManagerSablierClaimStream
+        - SablierDynamicAssetManagerSablierCreateStream
+      abis:
+        - name: SablierDynamicAssetManager
+          file: ./abis/SablierDynamicAssetManager.json
+      eventHandlers:
+        - event: OwnershipTransferred(indexed address,indexed address)
+          handler: handleOwnershipTransferred
+        - event: SablierClaimStream(bytes32,address,uint256,bytes32,bytes32)
+          handler: handleSablierClaimStream
+        - event: SablierCreateStream(address,address,uint256[],bytes32[],bytes32[])
+          handler: handleSablierCreateStream
+      file: ./src/sablier-dynamic-asset-manager.ts
+  - kind: ethereum
     name: NftAssetManager
     network: mainnet
     source:
-      address: "0x0"
+      address: "0xbB0679f6831Ee3736AE53D8fcECB9c0e684615d0"
       abi: NftAssetManager
-      startBlock: 0
+      startBlock: 20453501
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
