--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -8,9 +8,9 @@ dataSources:
     name: DarkpoolAssetManager
     network: mainnet
     source:
-      address: "0x159F3668c72BBeCdF1fb31beeD606Ec9649654eB"
+      address: "0xe24e7570Fe7207AdAaAa8c6c89a59850391B5276"
       abi: DarkpoolAssetManager
-      startBlock: 19875035
+      startBlock: 19758958
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -46,9 +46,9 @@ dataSources:
     name: UniswapSwapAssetManager
     network: mainnet
     source:
-      address: "0xc98b275a309f187b691e025b956e03603e12b420"
+      address: "0x63ecE4C05B8fB272D16844E96702Ea2f26370982"
       abi: UniswapSwapAssetManager
-      startBlock: 19875035
+      startBlock: 19758958
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -69,9 +69,9 @@ dataSources:
     name: UniswapLiquidityAssetManager
     network: mainnet
     source:
-      address: "0x53e5A08c95CF866E34F2A6A685ee9f90366e154E"
+      address: "0xfaA7b3a4b5c3f54a934a2e33D34C7bC099f96CCE"
       abi: UniswapLiquidityAssetManager
-      startBlock: 19875035
+      startBlock: 19758958
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -98,9 +98,9 @@ dataSources:
     name: CurveSingleExchangeAssetManager
     network: mainnet
     source:
-      address: "0xB1CC5D9227323330E8a58e891c123B38D03f0BAA"
+      address: "0x81F82957608f74441E085851cA5Cc091b23d17A2"
       abi: CurveSingleExchangeAssetManager
-      startBlock: 19875035
+      startBlock: 19758958
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -121,9 +121,9 @@ dataSources:
     name: CurveMultiExchangeAssetManager
     network: mainnet
     source:
-      address: "0x3D76Fd85FCc2593970d22Aa34bcC4c5444c57c9D"
+      address: "0xB354ECF032e9e14442bE590D9Eaee37d2924B67A"
       abi: CurveMultiExchangeAssetManager
-      startBlock: 19875035
+      startBlock: 19758958
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -144,9 +144,9 @@ dataSources:
     name: CurveAddLiquidityAssetManager
     network: mainnet
     source:
-      address: "0xEBeD6c7C2189bf8ad6687D3A4cf4b83fB4D1a3D2"
+      address: "0x49AeF2C4005Bf572665b09014A563B5b9E46Df21"
       abi: CurveAddLiquidityAssetManager
-      startBlock: 19875035
+      startBlock: 19758958
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -170,9 +170,9 @@ dataSources:
     name: CurveFSNAddLiquidityAssetManager
     network: mainnet
     source:
-      address: "0x43fbE6066886F7b89EA6091f6cea8E3AD0FA7C71"
+      address: "0xD61210E756f7D71Cc4F74abF0747D65Ea9d7525b"
       abi: CurveFSNAddLiquidityAssetManager
-      startBlock: 19875035
+      startBlock: 19758958
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -196,9 +196,9 @@ dataSources:
     name: CurveFSNRemoveLiquidityAssetManager
     network: mainnet
     source:
-      address: "0xfdA33b941E6C014bD079C6917b815EFA58976f37"
+      address: "0xB8d6D6b01bFe81784BE46e5771eF017Fa3c906d8"
       abi: CurveFSNRemoveLiquidityAssetManager
-      startBlock: 19875035
+      startBlock: 19758958
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -222,9 +222,9 @@ dataSources:
     name: CurveMPAddLiquidityAssetManager
     network: mainnet
     source:
-      address: "0x84eb120A35802460484015e6748375369e40468a"
+      address: "0x81f4f47aa3bBd154171C877b4d70F6C9EeCAb216"
       abi: CurveMPAddLiquidityAssetManager
-      startBlock: 19875035
+      startBlock: 19758958
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -248,9 +248,9 @@ dataSources:
     name: CurveMPRemoveLiquidityAssetManager
     network: mainnet
     source:
-      address: "0xC4e979C922E93938dBaBb6e1623a19cbc6132489"
+      address: "0x0C8542AB89c1C60D711B00F309f7EF63b5D9d6eb"
       abi: CurveMPRemoveLiquidityAssetManager
-      startBlock: 19875035
+      startBlock: 19758958
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -274,9 +274,9 @@ dataSources:
     name: CurveRemoveLiquidityAssetManager
     network: mainnet
     source:
-      address: "0xfBf0dDceF9360757fCA368911b6719a35DD8C660"
+      address: "0x221416CFa5A3CD92035E537ded1dD12d4d587c03"
       abi: CurveRemoveLiquidityAssetManager
-      startBlock: 19875035
+      startBlock: 19758958
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -300,9 +300,9 @@ dataSources:
     name: StakingAssetManager
     network: mainnet
     source:
-      address: "0x1Fa7Cb4925086128f3bb9e26761C9C75dbAC3CD1"
+      address: "0xCd9BC6cE45194398d12e27e1333D5e1d783104dD"
       abi: StakingAssetManager
-      startBlock: 20168930
+      startBlock: 19758958
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -326,9 +326,9 @@ dataSources:
     name: RocketPoolStakeAssetManager
     network: mainnet
     source:
-      address: "0xEF8F70bB29DEAd5CEcaE26C6Cb19B987475B3e48"
+      address: "0x1c32f8818e38a50d37d1E98c72B9516a50985227"
       abi: RocketPoolStakeAssetManager
-      startBlock: 20168930
+      startBlock: 19758958
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -352,7 +352,7 @@ dataSources:
     name: SablierLinearAssetManager
     network: mainnet
     source:
-      address: "0xd2983525E903Ef198d5dD0777712EB66680463bc"
+      address: "0x72aC6A36de2f72BD39e9c782e9db0DCc41FEbfe2"
       abi: SablierLinearAssetManager
       startBlock: 19758958
     mapping:
@@ -378,7 +378,7 @@ dataSources:
     name: SablierDynamicAssetManager
     network: mainnet
     source:
-      address: "0x71d2EBF08bF4FcB82dB5ddE46677263F4c534ef3"
+      address: "0xd2983525E903Ef198d5dD0777712EB66680463bc"
       abi: SablierDynamicAssetManager
       startBlock: 19758958
     mapping:
@@ -426,3 +426,26 @@ dataSources:
         - event: OwnershipTransferred(indexed address,indexed address)
           handler: handleOwnershipTransferred
       file: ./src/nft-asset-manager.ts
+  - kind: ethereum
+    name: OTCSwapAssetManager
+    network: mainnet
+    source:
+      address: "0x49AeF2C4005Bf572665b09014A563B5b9E46Df21"
+      abi: OTCSwapAssetManager
+      startBlock: 19758958
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.7
+      language: wasm/assemblyscript
+      entities:
+        - OTCSwapAssetManagerOwnershipTransferred
+        - Swap
+      abis:
+        - name: OTCSwapAssetManager
+          file: ./abis/OTCSwapAssetManager.json
+      eventHandlers:
+        - event: OwnershipTransferred(indexed address,indexed address)
+          handler: handleOwnershipTransferred
+        - event: Swap(bytes32,bytes32,bytes32,bytes32)
+          handler: handleSwap
+      file: ./src/otc-swap-asset-manager.ts
