--- a/subgraph-hardhatArb.yaml
+++ b/subgraph-hardhatArb.yaml
@@ -244,3 +244,49 @@ dataSources:
         - event: TorosWithdrawal(bytes32,address[2],uint256[2],bytes32[2],bytes32[2])
           handler: handleTorosWithdrawal
       file: ./src/toros-asset-manager.ts
+  - kind: ethereum
+    name: BatchJoinSplitAssetManager
+    network: mainnet
+    source:
+      address: "0x17f4B55A352Be71CC03856765Ad04147119Aa09B"
+      abi: BatchJoinSplitAssetManager
+      startBlock: 21626960
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.7
+      language: wasm/assemblyscript
+      entities:
+        - BatchJoinSplit
+      abis:
+        - name: BatchJoinSplitAssetManager
+          file: ./abis/BatchJoinSplitAssetManager.json
+      eventHandlers:
+        - event: BatchJoinSplit(bytes32[],bytes32[])
+          handler: handleBatchJoinSplit
+      file: ./src/batch-join-split-asset-manager.ts
+  - kind: ethereum
+    name: DarkPoolSwapAssetManager
+    network: mainnet
+    source:
+      address: "0x8797847c9d63D8Ed9C30B058F408d4257A33B76C"
+      abi: DarkPoolSwapAssetManager
+      startBlock: 21626960
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.7
+      language: wasm/assemblyscript
+      entities:
+        - DarkPoolCancelOrder
+        - DarkPoolCreateOrder
+        - DarkPoolSwap
+      abis:
+        - name: DarkPoolSwapAssetManager
+          file: ./abis/DarkPoolSwapAssetManager.json
+      eventHandlers:
+        - event: DarkPoolCancelOrder(bytes32)
+          handler: handleDarkPoolCancelOrder
+        - event: DarkPoolCreateOrder(bytes32)
+          handler: handleDarkPoolCreateOrder
+        - event: DarkPoolSwap(bytes32,bytes32,bytes32,bytes32)
+          handler: handleDarkPoolSwap
+      file: ./src/dark-pool-swap-asset-manager.ts
